// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UploadItem /> should render when [progress === 0] 1`] = `
<UploadItem__StyledUploadItem>
  <ProgressBar__AffixedProgressBar
    color="blue"
    now={0}
  />
  <UploadItem__UploadItemTitle
    failed={false}
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="upload"
    />
    <UploadItem__StyledFilename>
      Foo.fa
    </UploadItem__StyledFilename>
    <span>
      871.3KB
    </span>
  </UploadItem__UploadItemTitle>
</UploadItem__StyledUploadItem>
`;

exports[`<UploadItem /> should render when [progress > 0] 1`] = `
<UploadItem__StyledUploadItem>
  <ProgressBar__AffixedProgressBar
    color="blue"
    now={51}
  />
  <UploadItem__UploadItemTitle
    failed={false}
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="upload"
    />
    <UploadItem__StyledFilename>
      Foo.fa
    </UploadItem__StyledFilename>
    <span>
      871.3KB
    </span>
  </UploadItem__UploadItemTitle>
</UploadItem__StyledUploadItem>
`;
